removed overflow fix.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,10 +48,6 @@
     --ring: 224.3 76.3% 48%;
   }
 
-  html, body {
-    @apply overflow-x-hidden;
-    max-width: 100%;
-  }
 }
 
 @layer base {
